src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-37.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%YAML 1.2\\n---\\tfoo\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 9
      line: 0
      column: 9
- token: break
  stream: "\n"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 1
      column: 0
- token: directives_end
  stream: "---"
  span:
    start:
      index: 10
      line: 1
      column: 0
    end:
      index: 13
      line: 1
      column: 3
- value:
    version: "1.2"
    tags: {}
- remainder: "\tfoo"
  span:
    start:
      index: 13
      line: 1
      column: 3
    end:
      index: 17
      line: 1
      column: 7

