src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-39.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"---foo\")"
---
- token: directives_end
  stream: "---"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- severity: error
  message: the directives end marker must be followed by a line break or space
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
  stream: "---"
- value:
    explicit: true
    version: ~
    tags: {}
- remainder: foo
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 6
      line: 0
      column: 6

