src/grammar/document/snapshots/yaml_parser__grammar__document__tests__prefix-40.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix_unterminated, \"---\\nfoo\")"
---
- token: directives_end
  stream: "---"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 3
      line: 0
      column: 3
- value:
    explicit: true
    version: ~
    tags: {}
- remainder: "\nfoo"
  span:
    start:
      index: 3
      line: 0
      column: 3
    end:
      index: 7
      line: 1
      column: 3

